--- a/1.html
+++ b/1.html
@@ -12,9 +12,9 @@
 <li><a href="3.html">JavaScript</a></li>
 </ol>
 
-<h2>WEB</h2>
+<h2>HTML</h2>
 
-<img src="web.jpg" alt="web image" width="100" height="100">
+<img src="html.jpg" alt="html image" width="100" height="100">
 
 <p>The HyperText Markup Language or HTML is <strong>the standard <u>markup</u> language</strong> for documents designed to be displayed in a web browser. It can be assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.</p>
 <p>Web browsers receive <a href="https://en.wikipedia.org/wiki/HTML">HTML</a> documents from a web server or from local storage and render the documents into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.</p>
