--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
 <h2>WEB</h2>
 
-<img src="web.jpg" alt="web image" width="100" height="100">
+<img src="web.jpg" alt="web image" width="500" height="500">
 
-<p>The HyperText Markup Language or HTML is <strong>the standard <u>markup</u> language</strong> for documents designed to be displayed in a web browser. It can be assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.</p>
-<p>Web browsers receive <a href="https://en.wikipedia.org/wiki/HTML">HTML</a> documents from a web server or from local storage and render the documents into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.</p>
-<p style="margin-top=50px">HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects such as interactive forms may be embedded into the rendered page. HTML provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets. Tags such as &#60;img /&#62; and &#60;input /&#62; directly introduce content into the page. Other tags such as &#60;p&#62; surround and provide information about document text and may include other tags as sub-elements. Browsers do not display the HTML tags but use them to interpret the content of the page.</p>
-
+<p><strong><u><a href="https://en.wikipedia.org/wiki/Web_(programming_system)">Web</a> <u><strong> is a computer programming system created by Donald E. Knuth as the first implementation of what he called "literate programming": the idea that one could create software as works of literature, by embedding source code inside descriptive text, rather than the reverse (as is common practice in most programming languages), in an order that is convenient for exposition to human readers, rather than in the order demanded by the compiler.</p>
+<p>Web consists of two secondary programs: TANGLE, which produces compilable Pascal code from the source texts, and WEAVE, which produces nicely-formatted, printable documentation using TeX.</p>
+<p>CWEB is a version of Web for the C programming language, while noweb is a separate literate programming tool, which is inspired by Web (as reflected in the name) and which is language agnostic.</p>
+<p>The most significant programs written in Web are TeX and Metafont. Modern TeX distributions use another program Web2C to convert Web source to C.</p>
 </body>
 </html>
